--- a/src/main/resources/templates/404.html
+++ b/src/main/resources/templates/404.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="layout/main.html">
-
-    <div layout:fragment="content">
-        <h3>Что-то пошло не так! Мы уже работаем над этим!</h3>
-    </div>
-
+<div layout:fragment="content">
+    <h3>Что-то пошло не так! Мы уже работаем над этим!</h3>
+</div>
 </html>
