--- a/src/main/resources/templates/addarticle.html
+++ b/src/main/resources/templates/addarticle.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="layout/main.html">
-
 <div layout:fragment="content">
     <input type="hidden" id="userId" th:value="${currentUser.id}">
     <div class="row mt-2">
@@ -41,7 +40,7 @@
                     <option value="8">Наука</option>
                     <option value="9">Здоровье</option>
                     <option value="10">Мода</option>
-                    <option value="11">Путешествие</option>
+                    <option value="11">Путешествия</option>
                 </select>
             </div>
             <button class="btn btn-secondary" onclick="addArticle()">Save</button>
