--- a/src/main/resources/templates/allarticles.html
+++ b/src/main/resources/templates/allarticles.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="layout/main.html">
 <div layout:fragment="content">
     <div id="allarticles"></div>
@@ -28,7 +27,7 @@
 
         function loadArticles() {
             let req = new XMLHttpRequest()
-            req.open("GET", "http://localhost:8080/api/article/all")
+            req.open("GET", "http://localhost:8080/api/article/allarticles")
             req.onload = function () {
                 let html = ""
                 let articles = JSON.parse(req.responseText)
