--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6"
       layout:decorate="layout/main.html">
 <div layout:fragment="content">
     <input type="hidden" id="articleId" th:value="${articleId}">
     <input type="hidden" id="authorId" th:value="${currentUser.id}">
-<!--    <div id="userRole" th:attr="data-userRole=${#authentication.principal.authorities[0].authority}"></div>-->
-<!--    <input type="hidden" id="role" th:value="${currentUser.getRoles().getId()}">-->
-    <input type="hidden" th:each="role : ${currentUser.getRoles()}" th:value="${role.getName()}" th:id="${role.getName()}">
-
+    <input type="hidden" th:each="role : ${currentUser.getRoles()}" th:value="${role.getName()}"
+           th:id="${role.getName()}">
     <main class="container">
         <div class="row g-5">
             <div id="article" class="col-md-8"></div>
             <div th:insert="~{layout/sidebar}" class="col-md-4"></div>
         </div>
     </main>
-<!--    <button onclick="deletecommentModal(commentId)" type="button" class="btn btn-primary" sec:authorize="hasAuthority('ROLE_Admin')">Deletee</button>-->
-
-    <div class="modal fade" id="addNewCommentModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addNewCommentModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-body">
                     <div class="mb-3">
                         <label class="form-label" for="commentText">Текст</label>
-                        <textarea type="text" class="form-control" id="commentText" name="commentText" rows="5"></textarea>
+                        <textarea type="text" class="form-control" id="commentText" name="commentText"
+                                  rows="5"></textarea>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                        <button onclick="addNewComment(articleId)" type="button" class="btn btn-primary">Сохранить</button>
+                        <button onclick="addNewComment(articleId)" type="button" class="btn btn-primary">Сохранить
+                        </button>
                     </div>
                 </div>
             </div>
@@ -63,66 +61,66 @@
             req.onload = function () {
                 let article = JSON.parse(req.responseText)
                 let authorFullName = article.author.fullName
-                    let categoriesReq = new XMLHttpRequest();
-                    categoriesReq.open("GET", "http://localhost:8080/api/article/" + articleId + "/categories");
-                    categoriesReq.onload = function () {
-                        let categories = JSON.parse(categoriesReq.responseText);
-                        let commentsReq = new XMLHttpRequest();
-                        commentsReq.open("GET", "http://localhost:8080/api/article/" + articleId + "/comments");
-                        commentsReq.onload = function () {
-                            let comments = JSON.parse(commentsReq.responseText);
-                            let optionsDate = { year: 'numeric', month: 'long', day: 'numeric' }
-                            let optionsTime = { hour: 'numeric', minute: 'numeric'}
-                            let formattedDate = new Date(article.postTime).toLocaleDateString("ru-RU", optionsDate)
-                            let formattedTime = new Date(article.postTime).toLocaleTimeString("ru-RU", optionsTime)
-                            formattedDate = formattedDate.replaceAll(" г.", " ")
-                            let html = ""
-                            html += "<article class='blog-post'>"
-                            html += "<h2 class='display-5 link-body-emphasis mb-1'>" + article.title + "</h2>"
-                            html += "<p class='blog-post-meta'>" + formattedDate + formattedTime +" автор " +
-                                "<a href='/author/"+article.author.id+"'>" + authorFullName + "</a></p>"
-                            html += "<img class='w-100' src='"+article.imgUrl+"'>"
-                            html += "<div class='mt-3'>" + article.text + "</div>"
-                            for(let i=0; i< categories.length; i++){
-                                html += "<a href='/category/"+categories[i].id +"' type='button' class='btn btn-link'>" + categories[i].name + "</a>"
-                            }
-                            html += "<hr>"
-                            html += "<p><b>Комментарии:</b></p>"
-                            for(let i=0; i< comments.length; i++) {
-                                let optionsDate = { year: 'numeric', month: 'long', day: 'numeric' }
-                                let optionsTime = { hour: 'numeric', minute: 'numeric'}
-                                let formattedDate = new Date(comments[i].commentTime).toLocaleDateString("ru-RU", optionsDate)
-                                let formattedTime = new Date(comments[i].commentTime).toLocaleTimeString("ru-RU", optionsTime)
-                                formattedDate = formattedDate.replaceAll(" г.", " ")
-                                html += "<p class='fw-medium'>" + comments[i].author.fullName + " <span>"+formattedDate+formattedTime+"</span></p>"
-                                html += "<p>" + comments[i].commentText + "</p>"
-                                let isAdmin = document.getElementById('ROLE_Admin') !== null;
-                                if (isAdmin) {
-                                    html += "<button onclick='deleteCommentModal("+comments[i].id+")' class='btn btn-danger btn-sm'>Удалить комментарий</button>"
-                                }
-                                html +="<br>"
-                            }
-                            html += "<button onclick='addNewCommentModal()' class='btn btn-sm btn-secondary mt-3'>Новый комментарий</button>"
-                            document.getElementById("article").innerHTML = html
+                let categoriesReq = new XMLHttpRequest();
+                categoriesReq.open("GET", "http://localhost:8080/api/article/" + articleId + "/categories");
+                categoriesReq.onload = function () {
+                    let categories = JSON.parse(categoriesReq.responseText);
+                    let commentsReq = new XMLHttpRequest();
+                    commentsReq.open("GET", "http://localhost:8080/api/article/" + articleId + "/comments");
+                    commentsReq.onload = function () {
+                        let comments = JSON.parse(commentsReq.responseText);
+                        let optionsDate = {year: 'numeric', month: 'long', day: 'numeric'}
+                        let optionsTime = {hour: 'numeric', minute: 'numeric'}
+                        let formattedDate = new Date(article.postTime).toLocaleDateString("ru-RU", optionsDate)
+                        let formattedTime = new Date(article.postTime).toLocaleTimeString("ru-RU", optionsTime)
+                        formattedDate = formattedDate.replaceAll(" г.", " ")
+                        let html = ""
+                        html += "<article class='blog-post'>"
+                        html += "<h2 class='display-5 link-body-emphasis mb-1'>" + article.title + "</h2>"
+                        html += "<p class='blog-post-meta'>" + formattedDate + formattedTime + " автор " +
+                            "<a href='/author/" + article.author.id + "'>" + authorFullName + "</a></p>"
+                        html += "<img class='w-100' src='" + article.imgUrl + "'>"
+                        html += "<div class='mt-3'>" + article.text + "</div>"
+                        for (let i = 0; i < categories.length; i++) {
+                            html += "<a href='/category/" + categories[i].id + "' type='button' class='btn btn-link'>" + categories[i].name + "</a>"
                         }
-                        commentsReq.send()
+                        html += "<hr>"
+                        html += "<p><b>Комментарии:</b></p>"
+                        for (let i = 0; i < comments.length; i++) {
+                            let optionsDate = {year: 'numeric', month: 'long', day: 'numeric'}
+                            let optionsTime = {hour: 'numeric', minute: 'numeric'}
+                            let formattedDate = new Date(comments[i].commentTime).toLocaleDateString("ru-RU", optionsDate)
+                            let formattedTime = new Date(comments[i].commentTime).toLocaleTimeString("ru-RU", optionsTime)
+                            formattedDate = formattedDate.replaceAll(" г.", " ")
+                            html += "<p class='fw-medium'>" + comments[i].author.fullName + " <span>" + formattedDate + formattedTime + "</span></p>"
+                            html += "<p>" + comments[i].commentText + "</p>"
+                            let isAdmin = document.getElementById('ROLE_Admin') !== null;
+                            if (isAdmin) {
+                                html += "<button onclick='deleteCommentModal(" + comments[i].id + ")' class='btn btn-danger btn-sm'>Удалить комментарий</button>"
+                            }
+                            html += "<br>"
+                        }
+                        html += "<button onclick='addNewCommentModal()' class='btn btn-sm btn-secondary mt-3'>Новый комментарий</button>"
+                        document.getElementById("article").innerHTML = html
                     }
-                    categoriesReq.send()
+                    commentsReq.send()
+                }
+                categoriesReq.send()
             }
             req.send()
         }
 
-        function addNewCommentModal(){
+        function addNewCommentModal() {
             const myModal = new bootstrap.Modal("#addNewCommentModal", {backdrop: true, focus: true, keyboard: true})
             myModal.show();
         }
 
-        function addNewComment(articleId){
+        function addNewComment(articleId) {
             let req = new XMLHttpRequest()
             let commentCreate = {
-                "commentText" : document.getElementById("commentText").value,
-                "articleId" : articleId,
-                "authorId" : document.getElementById("authorId").value
+                "commentText": document.getElementById("commentText").value,
+                "articleId": articleId,
+                "authorId": document.getElementById("authorId").value
             }
             req.open("POST", "http://localhost:8080/api/comments")
             req.setRequestHeader("Content-type", "application/json")
