--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<!--    <div class="col-md-4">-->
-        <div class="position-sticky" style="top: 2rem;">
-            <div class="p-4 mb-3 bg-body-tertiary rounded">
-                <h4 class="fst-italic">О нас</h4>
-                <p class="mb-0">Мы рассказываем раельные, не придуманные истории</p>
-            </div>
-            <div>
-                <h4 class="fst-italic">Недавние статьи</h4>
-                <ul class="list-unstyled" th:each="lastArticle : ${lastArticles}">
-                    <li>
-                        <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-sm-center py-2 link-body-emphasis text-decoration-none border-top"
-                           th:href="${'/article/'+lastArticle.getId()}">
-                            <img alt="Article Image" th:src="${lastArticle.imgUrl}" width=175 height="96">
-                            <div>
-                                <h6 class="mb-0" th:text="${lastArticle.title}"></h6>
-                                <small class="text-body-secondary" th:text="${#temporals.format(lastArticle.postTime, 'dd MMMM yyyy HH:mm')}"></small>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="p-4">
-                <h4 class="fst-italic">Archives</h4>
-                <ol class="list-unstyled mb-0">
-                    <li><a href="#">March 2021</a></li>
-                    <li><a href="#">February 2021</a></li>
-                    <li><a href="#">January 2021</a></li>
-                    <li><a href="#">December 2020</a></li>
-                    <li><a href="#">November 2020</a></li>
-                    <li><a href="#">October 2020</a></li>
-                    <li><a href="#">September 2020</a></li>
-                    <li><a href="#">August 2020</a></li>
-                    <li><a href="#">July 2020</a></li>
-                    <li><a href="#">June 2020</a></li>
-                    <li><a href="#">May 2020</a></li>
-                    <li><a href="#">April 2020</a></li>
-                </ol>
-            </div>
-
-            <div class="p-4">
-                <h4 class="fst-italic">Контакты</h4>
-                <ol class="list-unstyled">
-                    <li><a href="#">Whatsapp</a></li>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Facebook</a></li>
-                </ol>
-            </div>
-        </div>
-<!--    </div>-->
+<div class="position-sticky" style="top: 2rem;">
+    <div class="p-4 mb-3 bg-body-tertiary rounded">
+        <h4 class="fst-italic">О нас</h4>
+        <p class="mb-0">Мы рассказываем раельные, не придуманные истории</p>
+    </div>
+    <div>
+        <h4 class="fst-italic">Недавние статьи</h4>
+        <ul class="list-unstyled" th:each="lastArticle : ${lastArticles}">
+            <li>
+                <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-sm-center py-2 link-body-emphasis text-decoration-none border-top"
+                   th:href="${'/article/'+lastArticle.getId()}">
+                    <img alt="Article Image" th:src="${lastArticle.imgUrl}" width=175 height="96">
+                    <div>
+                        <h6 class="mb-0" th:text="${lastArticle.title}"></h6>
+                        <small class="text-body-secondary"
+                               th:text="${#temporals.format(lastArticle.postTime, 'dd MMMM yyyy HH:mm')}"></small>
+                    </div>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div class="p-4">
+        <h4 class="fst-italic">Контакты</h4>
+        <ol class="list-unstyled">
+            <li><a href="#">Whatsapp</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Facebook</a></li>
+        </ol>
+    </div>
+</div>
 
 </html>
