--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -40,7 +40,7 @@
             </form>
         </div>
     </div>
-    <div class="row mt-2" sec:authorize="hasAuthority('Admin')">
+    <div class="row mt-2" sec:authorize="hasAuthority('ROLE_Admin')">
         <div class="col-4 mx-auto">
             <hr class="my-4">
             <div class="alert alert-danger alert-dismissible fade show" role="alert"
