--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -17,7 +17,7 @@
                         <label for="searchByAuthor" class="form-label ms-2">по автору</label>
                         <input class="form-check-input" type="checkbox" id="searchByAuthor" name="searchByAuthor">
                     </div>
-                    <button type="button" class="btn btn-primary" onclick="search()">Поиск</button>
+                    <button type="button" class="btn btn-outline-secondary" onclick="search()">Поиск</button>
                     <div class="row mt-3">
                         <div class="col" id="articles"></div>
                     </div>
