--- a/src/main/resources/templates/author.html
+++ b/src/main/resources/templates/author.html
@@ -7,7 +7,7 @@
     <main class="container">
         <div class="row g-5">
             <div class="col-md-8" id="byauthor"></div>
-            <div class="col-md-4" th:insert="~{layout/sidebar}"></div>
+            <div class="col-md-4" th:if="${lastArticles != null}" th:insert="~{layout/sidebar}"></div>
         </div>
     </main>
 
