--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -22,7 +22,7 @@
                         <div class="col" id="articles"></div>
                     </div>
                 </div>
-                <div class="col-md-4" th:insert="~{layout/sidebar}"></div>
+                <div class="col-md-4" th:if="${lastArticles != null}" th:insert="~{layout/sidebar}"></div>
             </div>
     </main>
     <script type="text/javascript">
