--- a/src/main/resources/templates/myarticles.html
+++ b/src/main/resources/templates/myarticles.html
@@ -50,7 +50,7 @@
                             <option value="8">Наука</option>
                             <option value="9">Здоровье</option>
                             <option value="10">Мода</option>
-                            <option value="11">Путешествие</option>
+                            <option value="11">Путешествия</option>
                         </select>
                     </div>
                 </div>
