--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -15,7 +15,7 @@
                     <div>
                         <h6 class="mb-0" th:text="${lastArticle.title}"></h6>
                         <small class="text-body-secondary"
-                               th:text="${#temporals.format(lastArticle.postTime, 'dd MMMM yyyy HH:mm')}"></small>
+                               th:text="${#temporals.format(lastArticle.postTime, 'dd MMMM yyyy, HH:mm')}"></small>
                     </div>
                 </a>
             </li>
